# ParListCPU

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  firmcore_baseline  header.h  main.cpp  memorytest.cpp  mtest  run.sh  speedup.py
CaseStudy/: case.py  gen137.py  homo_k_1_lmd_5_pathlmd.txt  plot.py  target_highlight_137.py
CaseStudy/homo/: __vtx_map.txt  k.txt  l0.txt  l1.txt  l2.txt  (+6 more)
Core/: CMakeLists.txt  FCNaive.cpp  FCNaive.h  FCPathLevelLeft.cpp  FCPathLevelLeft.h  FCPathLevelRight.cpp  FCPathLevelRight.h  FCPathMem.cpp  FCPathMem.h  FCTree.cpp  FCTree.h  FCTreeBuilder.cpp  FCTreeBuilder.h  FCTreeBuilderCoreParallel.cpp  FCTreeBuilderCoreParallel.h  FCTreeBuilderLeft.cpp  FCTreeBuilderLeft.h  FCTreeBuilderPathParallelByk.cpp  FCTreeBuilderPathParallelByk.h  FCTreeBuilderPathParallelBylmd.cpp  FCTreeBuilderPathParallelBylmd.h  FCTreeBuilderRight.cpp  FCTreeBuilderRight.h  FCTreeDFS.cpp  FCTreeDFS.h  Makefile  cmake_install.cmake
CoreIndexParallel/: CMakeLists.txt  CoreIndex.cpp  CoreIndex.h  Makefile  cmake_install.cmake
CoreParallel/: CMakeLists.txt  FCCoreTree.cpp  FCCoreTree.h  FCSyncLeft.cpp  FCSyncLeft.h  FCSyncMem.cpp  FCSyncMem.h  FCSyncRight.cpp  FCSyncRight.h  FCTreeBuilderCoreParallel.cpp  FCTreeBuilderCoreParallel.h  FCTreeBuilderCoreParallelByK.cpp  FCTreeBuilderCoreParallelByK.h  Makefile  cmake_install.cmake  readme.md
CoreParallelNew/: CMakeLists.txt  CoreParallelNew.cpp  CoreParallelNew.h  Makefile  cmake_install.cmake
Graph/: CMakeLists.txt  Graph.cpp  Graph.h  Makefile  MultilayerGraph.cpp  MultilayerGraph.h  MultilayerGraph2.cpp  MultilayerGraph2.h  cmake_install.cmake
Output/: dblp-coauthor_k_2_lmd_7_pathlmd.txt  example2_k_2_lmd_1_serial.txt  example2_k_2_lmd_2_serial.txt  example2_k_3_lmd_2_pathlmd.txt  example2_k_3_lmd_2_serial.txt  example_k_1_lmd_1.txt  example_k_1_lmd_2.txt  example_k_2_lmd_1.txt  example_k_2_lmd_2_serial.txt  homo_k_10_lmd_1_pathlmd.txt  homo_k_12_lmd_2_pathlmd.txt  homo_k_1_lmd_1_pathlmd.txt  homo_k_1_lmd_2_pathlmd.txt  homo_k_1_lmd_3_pathlmd.txt  homo_k_1_lmd_4_pathlmd.txt  homo_k_2_lmd_1_pathlmd.txt  homo_k_2_lmd_2.txt  homo_k_39_lmd_1_pathlmd.txt  homo_k_4_lmd_3_pathlmd.txt  homo_k_6_lmd_1_pathlmd.txt  homo_k_7_lmd_2_pathlmd.txt  obamainisrael_k_13_lmd_2.txt  obamainisrael_k_17_lmd_2_pathlmd.txt  obamainisrael_k_1_lmd_3_pathlmd.txt  obamainisrael_k_2_lmd_1_pathlmd.txt  obamainisrael_k_2_lmd_2_pathlmd.txt  obamainisrael_k_38_lmd_1_pathlmd.txt  obamainisrael_k_3_lmd_1_pathlmd.txt  obamainisrael_k_3_lmd_2_pathlmd.txt  obamainisrael_k_7_lmd_3_pathlmd.txt  sacchcere_k_7_lmd_3_pathlmd.txt  so_k_3_lmd_10.txt  so_k_3_lmd_10_pathk.txt  so_k_3_lmd_10_pathlmd.txt
Util/: CheckMLCDTime.h  CoreIndexTime.h  KLmdUtils.h  MemoryUtils.h
klmd/: amazon_klmd.txt  dblp-coauthor_klmd.txt  fao_klmd.txt  flickr-growth_klmd.txt  homo-0-5.txt  internet_klmd.txt  obamainisrael_klmd.txt  s1_klmd.txt  s2_klmd.txt  sacchcere_klmd.txt  so_klmd.txt  wiki_klmd.txt
(+7 files in other folders)
